fix: start page header on smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ table td {
 
 @responsive {
   .grid-columns-1024 {
-    grid-template-columns: 1fr 1024px 1fr;
+    grid-template-columns: 20px 1fr minmax(auto, 1024px) 1fr 20px;
   }
 }
 
